feat: :art: #20 nullableのものはrequiredを外す
